Fix colour contrast on OAS pages

--- a/app/assets/stylesheets/_core.scss
+++ b/app/assets/stylesheets/_core.scss
@@ -156,3 +156,7 @@ table {
     color: black !important;
   }
 }
+
+.Vlt-badge--grey, .Vlt-badge--blue, .Vlt-badge--green, .Vlt-badge--red, .Nxd-method-badge--get, .Nxd-method-badge--post, .Nxd-method-badge--put, .Nxd-method-badge--delete {
+  color: white;
+}
